--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "hello_react",
   "version": "1.0.0",
-  "description": "",
+  "description": "Hello React",
+  "private": true,
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve",
+    "webpack": "webpack -d"
   },
   "keywords": [],
   "author": "",
